--- a/tripster/src/App.css
+++ b/tripster/src/App.css
@@ -1,3 +1,8 @@
+*{
+  margin: 0;
+  padding: 0;
+  font-family: "Lato", sans-serif;
+}
 video{
   top: 0;
   /* height: 500px; */
@@ -9,22 +14,5 @@ video{
   width: 100%;
   height: 650px;
   color: white;
-  background: linear-gradient(#061526, #144073); 
-}
-
-/* aboutWebsite section */
-#aboutWebsite{
-  background-color: #e7e7e7;
-}
-
-/* Footer */
-#footerLeft{
-  font-size: 35px;
-  display: flex;
-  gap: 30px;  
-}
-
-#footerRight{
-  font-size: 18px;
-  font-weight: 700;  
+  background: linear-gradient(#061526, #144073);
 }
